<resources>
    <string name="app_name" translatable="false">UNSERsplit</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_transaction">transaction</string>
    <string name="title_activity_add_friend">friends</string>
    <string name="title_activity_groupOverview">group</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="add_friend">Add Friends</string>
    <string name="friend_requests">friend requests</string>
    <string name="exclamation_error">Uh Oh</string>
    <string name="groups_and_people">Groups/People:</string>
    <string name="input_password">password</string>
    <string name="question_no_account">No account?</string>
    <string name="input_firstname">first name</string>
    <string name="input_lastname">last name</string>
    <string name="input_optional_iban">iban (optional)</string>
    <string name="input_email">email</string>
    <string name="button_delete">delete</string>
    <string name="button_save">save</string>
    <string name="example_firstname">John</string>
    <string name="example_lastname">Doe</string>
    <string name="example_iban" translatable="false">AT61 1904 3002 3457 3201</string>
    <string name="button_accept">accept</string>
    <string name="button_deny">deny</string>
    <string name="members">members: %1$d</string>
    <string name="button_back">back</string>
    <string name="person">person</string>
    <string name="create_group">create group</string>
    <string name="logout">logout</string>
    <string name="add_friends">add friends</string>
    <string name="pending_friends">pending</string>
    <string name="action_yes">yes</string>
    <string name="action_no">no</string>
    <string name="title_delete_user">Delete your account</string>
    <string name="content_delete_user">Are you sure to delete your account. This action can not be undone!</string>
    <string name="title_delete_group">Delete this group</string>
    <string name="content_delete_group">Are you sure to delete \'%1$s\'. This action can not be undone!</string>
    <string name="already_friend">already sent</string>
    <string name="you">you</string>
</resources>